--- a/config-builder/host_vars/s1-ce02.yml
+++ b/config-builder/host_vars/s1-ce02.yml
@@ -43,3 +43,6 @@ static_routes:
 - vrf: CLIENTS
   destination_address_prefix: 0.0.0.0/0
   gateway: 10.18.10.1
+- vrf: default
+  destination_address_prefix: 0.0.0.0/0
+  gateway: 192.168.2.1
