feat: Add link coloring and VPN steering in BKP VRF

--- a/anta/snapshot-edge.yml
+++ b/anta/snapshot-edge.yml
@@ -19,3 +19,11 @@ text_format:
   - "show bgp evpn"
   - "show mac address-table"
   - "show arp vrf all"
+  - "show traffic-engineering segment-routing policy"
+  - "show traffic-engineering segment-routing policy summary"
+  - "show traffic-engineering segment-routing policy segment-list"
+  - "show isis segment-routing adjacency-segments"
+  - "show isis segment-routing prefix-segments"
+  - "show isis summary"
+  - "show ip route vrf all detail"
+  - "show tunnel rib colored system-colored-tunnel-rib brief"
