--- a/config-builder/group_vars/s1-pe.yml
+++ b/config-builder/group_vars/s1-pe.yml
@@ -1,3 +1,10 @@
+vlans:
+  - id: 1810
+    name: "S1-FW-XCO"
+    tenant: "FW-HA"
+  - id: 2001
+    name: "BKP-SITE01"
+    tenant: "BKP"
 
 loopback_interfaces:
   - name: Loopback0
@@ -8,18 +15,9 @@ loopback_interfaces:
     isis_enable: "CORE-ISIS"
     isis_passive: True
     node_segment:
-      ipv4_index: "{{ rid.split('.')[3] }}"
+      ipv4_index: "{{ device_id }}"
   - name: Loopback1018
     description: "Router ID"
     shutdown: False
-    vrf: CLIENTS
-    ip_address: "1.18.10.{{ rid.split('.')[3] }}/32"
-
-vlan_interfaces:
-- name: "Vlan1810"
-  description: vrf-clients-xco-firewall-site01
-  shutdown: False
-  vrf: CLIENTS
-  ip_address: "10.18.10.{{ rid.split('.')[3] }}/24"
-  ip_virtual_router_addresses:
-    - "10.18.10.1"
+    vrf: FW-HA
+    ip_address: "1.18.10.{{ device_id }}/32"
