--- a/config-builder/host_vars/s2-pe01.yml
+++ b/config-builder/host_vars/s2-pe01.yml
@@ -20,3 +20,10 @@ ethernet_interfaces:
   ip_address: 10.0.2.2/31
   isis_enable: "CORE-ISIS"
   isis_network_point_to_point: True
+
+- name: Ethernet4
+  peer: s2-ce01
+  shutdown: False
+  description: to s2-ce01 - CLIENT use-case - Remote end
+  mode: "trunk"
+  vlans: "1811,2002"
