--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -24,13 +24,19 @@ username tom privilege 15 role network-admin secret sha512 $6$TyWn7NeXe/vBRl1t$S
 vlan 1810
    name S1-FW-XCO
 !
-vrf instance CLIENTS
-   description CLIENTS VRF
+vlan 2001
+   name BKP-SITE01
+!
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 !
 interface Port-Channel1
    description to s1-pe01 - firewall test - vrrp
    switchport
-   switchport trunk allowed vlan 1810
+   switchport trunk allowed vlan 1810, 2001
    switchport mode trunk
 !
 interface Ethernet1
@@ -47,18 +53,27 @@ interface Management0
    ip address 192.168.2.211/24
 !
 interface Vlan1810
-   description vrf-clients-xco-firewall-site01
+   description vrf-FW-HA-xco-firewall-site01
    no shutdown
-   vrf CLIENTS
-   ip address 10.18.10.21/24
+   vrf FW-HA
+   ip address 10.18.10.211/24
    vrrp 10 priority-level 100
    vrrp 10 ipv4 10.18.10.254
    vrrp 10 ipv4 version 3
 !
-ip routing
-ip routing vrf CLIENTS
+interface Vlan2001
+   description vrf-bkp-xco-site01
+   no shutdown
+   vrf BKP
+   ip address 10.200.1.211/24
 !
-ip route vrf CLIENTS 0.0.0.0/0 10.18.10.1
+ip routing
+ip routing vrf BKP
+ip routing vrf FW-HA
+!
+ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
+ip route vrf BKP 0.0.0.0/0 10.200.1.1
+ip route 0.0.0.0/0 192.168.2.1
 !
 management api http-commands
    protocol https
