--- a/config-builder/intended/configs/s1-pe04.cfg
+++ b/config-builder/intended/configs/s1-pe04.cfg
@@ -24,8 +24,14 @@ username tom privilege 15 role network-admin secret sha512 $6$TyWn7NeXe/vBRl1t$S
 vlan 1810
    name S1-FW-XCO
 !
-vrf instance CLIENTS
-   description CLIENTS VRF
+vlan 2001
+   name BKP-SITE01
+!
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 !
 interface Port-Channel4
    description to s1-ce02 - firewall test - vrrp
@@ -74,7 +80,7 @@ interface Loopback0
 interface Loopback1018
    description Router ID
    no shutdown
-   vrf CLIENTS
+   vrf FW-HA
    ip address 1.18.10.14/32
 !
 interface Management0
@@ -83,16 +89,31 @@ interface Management0
    ip address 192.168.2.14/24
 !
 interface Vlan1810
-   description vrf-clients-xco-firewall-site01
+   description vrf-FW-HA-xco-firewall-site01
    no shutdown
-   vrf CLIENTS
+   vrf FW-HA
    ip address 10.18.10.14/24
    ip virtual-router address 10.18.10.1
 !
 ip virtual-router mac-address 00:1c:73:00:dc:01
 !
 ip routing
-ip routing vrf CLIENTS
+ip routing vrf BKP
+ip routing vrf FW-HA
+!
+ip extcommunity-list EXTCOM-BKP permit rt 1:2
+!
+ip extcommunity-list EXTCOM-CLIENT permit rt 1:1
+!
+ip route 0.0.0.0/0 192.168.2.1
+!
+route-map RM-SET-COLOR permit 10
+   description Add COLOR-02-BKP to BKP routes
+   match extcommunity EXTCOM-BKP
+   set extcommunity color 300 additive
+!
+route-map RM-SET-COLOR permit 90
+   description Default permit
 !
 router bgp 65000
    router-id 1.0.0.14
@@ -100,7 +121,8 @@ router bgp 65000
    no bgp default ipv4-unicast
    neighbor EVPN-CORE peer group
    neighbor EVPN-CORE update-source Loopback0
-   neighbor EVPN-CORE send-community
+   neighbor EVPN-CORE send-community standard extended
+   neighbor EVPN-CORE route-map RM-SET-COLOR in
    neighbor 1.0.0.111 peer group EVPN-CORE
    neighbor 1.0.0.111 remote-as 65000
    neighbor 1.0.0.111 description s2-p01
@@ -119,12 +141,23 @@ router bgp 65000
       neighbor EVPN-CORE activate
       neighbor EVPN-CORE encapsulation mpls
    !
-   vrf CLIENTS
+   vrf BKP
+      rd 1.0.0.14:2
+      route-target import evpn 1:2
+      route-target export evpn 1:2
+      redistribute connected
+      redistribute static
+   !
+   vrf FW-HA
       rd 1.0.0.14:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       redistribute connected
       redistribute static
+!
+router traffic-engineering
+   segment-routing
+      rib system-colored-tunnel-rib
 !
 router isis CORE-ISIS
    net 49.0192.0168.0000.0014.00
@@ -134,9 +167,25 @@ router isis CORE-ISIS
    advertise passive-only
    !
    address-family ipv4 unicast
+      fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
+      prefix-segment 10.0.0.0/31 index 50000
+      prefix-segment 10.0.0.2/31 index 50002
+      prefix-segment 10.0.0.4/31 index 50004
+      prefix-segment 10.0.0.6/31 index 50006
+      prefix-segment 10.0.0.8/31 index 50008
+      prefix-segment 10.0.1.0/31 index 50010
+      prefix-segment 10.0.1.2/31 index 50012
+      prefix-segment 10.0.1.4/31 index 50014
+      prefix-segment 10.0.1.6/31 index 50016
+      prefix-segment 10.0.1.8/31 index 50018
+      prefix-segment 10.0.1.10/31 index 50100
+      prefix-segment 10.0.1.12/31 index 50112
+      prefix-segment 10.0.1.14/31 index 50114
+      prefix-segment 10.0.2.0/31 index 50020
+      prefix-segment 10.0.2.2/31 index 50022
 !
 mpls ip
 !
