--- a/config-builder/intended/configs/s2-p01.cfg
+++ b/config-builder/intended/configs/s2-p01.cfg
@@ -64,6 +64,8 @@ interface Management0
 !
 ip routing
 !
+ip route 0.0.0.0/0 192.168.2.1
+!
 router bgp 65000
    router-id 1.0.0.121
    maximum-paths 4 ecmp 4
@@ -93,6 +95,10 @@ router bgp 65000
       neighbor EVPN-CORE activate
       neighbor EVPN-CORE encapsulation mpls
 !
+router traffic-engineering
+   segment-routing
+      rib system-colored-tunnel-rib
+!
 router isis CORE-ISIS
    net 49.0192.0168.0000.0121.00
    is-type level-2
@@ -101,9 +107,25 @@ router isis CORE-ISIS
    advertise passive-only
    !
    address-family ipv4 unicast
+      fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
+      prefix-segment 10.0.0.0/31 index 50000
+      prefix-segment 10.0.0.2/31 index 50002
+      prefix-segment 10.0.0.4/31 index 50004
+      prefix-segment 10.0.0.6/31 index 50006
+      prefix-segment 10.0.0.8/31 index 50008
+      prefix-segment 10.0.1.0/31 index 50010
+      prefix-segment 10.0.1.2/31 index 50012
+      prefix-segment 10.0.1.4/31 index 50014
+      prefix-segment 10.0.1.6/31 index 50016
+      prefix-segment 10.0.1.8/31 index 50018
+      prefix-segment 10.0.1.10/31 index 50100
+      prefix-segment 10.0.1.12/31 index 50112
+      prefix-segment 10.0.1.14/31 index 50114
+      prefix-segment 10.0.2.0/31 index 50020
+      prefix-segment 10.0.2.2/31 index 50022
 !
 mpls ip
 !
