--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 anta==0.11.0
 ansible==8.6.1
 eos-downloader==0.9.0
+netaddr>=0.7.19
+treelib>=1.5.5
+jsonschema<4.18,>=4.5.1
+md-toc>=7.1.0
+deepmerge>=1.1.0
