fix: Update env for correct EOL

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
-export ANTA_ROOT_FOLDER=./anta
+export ANTA_ROOT_FOLDER=anta/
 export ANTA_USERNAME=ansible
 export ANTA_PASSWORD=ansible
-export ANTA_ENABLE=false
+export ANTA_ENABLE=true
 export ANTA_CATALOG=${ANTA_ROOT_FOLDER}/nrfu.yml
 export ANTA_INVENTORY=${ANTA_ROOT_FOLDER}/inventory.yml
 export ANTA_SNAPSHOT=$(date +%Y-%m-%d-%Hh-%Mmin)-snapshots
