--- a/config-builder/.envrc
+++ b/config-builder/.envrc
@@ -6,3 +6,4 @@ export ANTA_CATALOG=${ANTA_ROOT_FOLDER}/nrfu.yml
 export ANTA_INVENTORY=${ANTA_ROOT_FOLDER}/inventory.yml
 export ANTA_SNAPSHOT=$(date +%Y-%m-%d-%Hh-%Mmin)-snapshots
 export ANTA_EXEC_SNAPSHOT_OUTPUT_DIRECTORY=${ANTA_ROOT_FOLDER}/${ANTA_SNAPSHOT}
+unset ANSIBLE_VAULT_PASSWORD_FILE
