--- a/config-builder/playbooks/config-management.yml
+++ b/config-builder/playbooks/config-management.yml
@@ -1,14 +1,30 @@
 ---
-- name: Generate Configs using AVD
-  hosts: all
+- name: Generate Configs using AVD for backbone
+  hosts: backbone
   gather_facts: false
+  tasks:
+    - name: Generate eos design artifacts
+      tags: ['build']
+      ansible.builtin.import_role:
+        name: arista.avd.eos_designs
+    - name: Generate Device Configurations and Documentation
+      tags: ['build']
+      ansible.builtin.import_role:
+        name: arista.avd.eos_cli_config_gen
 
+- name: Generate Configs using AVD for clients/CPEs
+  hosts: cpe
+  gather_facts: false
   tasks:
     - name: Generate Device Configurations and Documentation
       tags: ['build']
       ansible.builtin.import_role:
         name: arista.avd.eos_cli_config_gen
 
+- name: Generate Configs using AVD for clients/CPEs
+  hosts: all
+  gather_facts: false
+  tasks:
     - name: Deploy device configuration
       tags: ['never', 'deploy']
       ansible.builtin.import_role:
