--- a/config-builder/intended/configs/s1-ce02.cfg
+++ b/config-builder/intended/configs/s1-ce02.cfg
@@ -28,6 +28,18 @@ service routing protocols model multi-agent
 hostname s1-ce02
 dns domain atd.lab
 !
+vlan 1810
+   name S1-FW-XCO
+!
+vlan 2001
+   name BKP-SITE01
+!
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
+!
 management api http-commands
    protocol https
    no shutdown
@@ -37,14 +49,29 @@ management api http-commands
 !
 aaa authorization exec default local
 !
+interface Port-Channel1
+   description to s1-pe01 - firewall test - vrrp
+   switchport trunk allowed vlan 1018,2001
+   switchport mode trunk
+!
+interface Ethernet1
+   channel-group 1 mode active
+!
+interface Ethernet2
+   channel-group 1 mode active
+!
 interface Management0
    description oob_management
    no shutdown
    ip address 192.168.2.212/24
 !
 ip routing
+ip routing vrf BKP
+ip routing vrf FW-HA
 !
 ip route 0.0.0.0/0 192.168.2.1
+ip route vrf BKP 0.0.0.0/0 10.200.1.1
+ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 !
 ntp local-interface Management0
 ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
