--- a/config-builder/group_vars/backbone/p-nodes.yml
+++ b/config-builder/group_vars/backbone/p-nodes.yml
@@ -2,7 +2,8 @@ p:
   defaults:
     platform: cEOS-lab
     loopback_ipv4_pool: 10.255.0.0/27
-    mpls_route_reflectors: [ s1-p01, s2-p02]
+    # mpls_route_reflectors: [ s1-p01, s2-p02]
+    # mpls_overlay_role: server
     overlay_address_families:
       - "evpn"
 
@@ -11,6 +12,7 @@ p:
       id: 1
       mgmt_ip: 192.168.2.111/24
       mpls_overlay_role: server
+      evpn_role: server
     - name: s1-p02
       id: 1
       mgmt_ip: 192.168.2.112/24
@@ -20,4 +22,5 @@ p:
     - name: s2-p02
       id: 4
       mgmt_ip: 192.168.2.122/24
+      evpn_role: server
       mpls_overlay_role: server
