--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -51,7 +51,7 @@ aaa authorization exec default local
 !
 interface Port-Channel1
    description to s1-pe01 - firewall test - vrrp
-   switchport trunk allowed vlan 1810, 2001
+   switchport trunk allowed vlan 1018,2001
    switchport mode trunk
 !
 interface Ethernet1
@@ -64,21 +64,6 @@ interface Management0
    description oob_management
    no shutdown
    ip address 192.168.2.211/24
-!
-interface Vlan1810
-   description vrf-FW-HA-xco-firewall-site01
-   no shutdown
-   vrf FW-HA
-   ip address 10.18.10.{{ device_id }}/24
-   vrrp 10 priority-level 100
-   vrrp 10 ipv4 10.18.10.254
-   vrrp 10 ipv4 version 3
-!
-interface Vlan2001
-   description vrf-bkp-xco-site01
-   no shutdown
-   vrf BKP
-   ip address 10.200.1.{{ device_id }}/24
 !
 ip routing
 ip routing vrf BKP
