--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -150,6 +150,7 @@ router bgp 65001
    neighbor EVPN-OVERLAY-PEERS remote-as 65001
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
+   neighbor EVPN-OVERLAY-PEERS route-reflector-client
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
@@ -158,6 +159,16 @@ router bgp 65001
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
    neighbor RR-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.1.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.1 description s1-pe01_Loopback0
+   neighbor 10.255.1.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.2 description s1-pe02_Loopback0
+   neighbor 10.255.1.3 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.3 description s1-pe03_Loopback0
+   neighbor 10.255.1.4 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.4 description s1-pe04_Loopback0
+   neighbor 10.255.1.5 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
