--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -171,6 +171,7 @@ router bgp 65001
    neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor EVPN-OVERLAY-PEERS activate
    !
    address-family ipv4
