--- a/config-builder/intended/structured_configs/s1-p02.yml
+++ b/config-builder/intended/structured_configs/s1-p02.yml
@@ -216,3 +216,8 @@ ethernet_interfaces:
   description: P2P_s1-p01_Ethernet5
 metadata:
   platform: cEOS-lab
+router_bgp:
+  address_family_evpn:
+    neighbor_default:
+      encapsulation: mpls
+      next_hop_self_source_interface: Loopback0
