--- a/config-builder/intended/structured_configs/s1-pe02.yml
+++ b/config-builder/intended/structured_configs/s1-pe02.yml
@@ -204,6 +204,17 @@ ethernet_interfaces:
   mpls:
     ip: true
   description: P2P_s1-p02_Ethernet2
+- name: Ethernet4
+  peer: s1-ce02
+  peer_interface: eth1
+  peer_type: router
+  description: ROUTER_s1-ce02_eth1
+  shutdown: false
+  switchport:
+    enabled: true
+    mode: trunk
+    trunk:
+      allowed_vlan: '1018'
 vlans:
 - id: 1811
   name: SVC01_C1_VLAN_FIREWALL
