--- a/config-builder/inventory.yml
+++ b/config-builder/inventory.yml
@@ -59,3 +59,7 @@ all:
         network_services:
           children:
             backbone_pe_routers:
+
+        # network_services:
+        #   children:
+        #     backbone_pe_routers:
