--- a/config-builder/intended/configs/s1-pe04.cfg
+++ b/config-builder/intended/configs/s1-pe04.cfg
@@ -88,15 +88,11 @@ interface Ethernet2
    isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Ethernet4
+   description ROUTER_s1-ce04_eth1
    no shutdown
-   no switchport
-!
-interface Ethernet4.10
-   description C1_L3_SERVICE
-   no shutdown
-   encapsulation dot1q vlan 10
-   vrf SVC01_VRF01
-   ip address 10.0.1.2/29
+   switchport trunk allowed vlan 1018
+   switchport mode trunk
+   switchport
 !
 interface Loopback0
    description ROUTER_ID
