--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -87,6 +87,13 @@ interface Ethernet2
    isis authentication mode md5
    isis authentication key 7 $1c$sTNAlR6rKSw=
 !
+interface Ethernet3
+   description ROUTER_s2-ce01_eth1
+   no shutdown
+   switchport trunk allowed vlan 1018
+   switchport mode trunk
+   switchport
+!
 interface Loopback0
    description ROUTER_ID
    no shutdown
