--- a/config-builder/intended/configs/s1-pe01.cfg
+++ b/config-builder/intended/configs/s1-pe01.cfg
@@ -178,7 +178,10 @@ router isis CORE
    router-id ipv4 10.255.1.1
    is-type level-2
    log-adjacency-changes
+   set-overload-bit on-startup 1800
    advertise passive-only
+   spf-interval 1 50 100
+   graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
