--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -146,36 +146,40 @@ router bgp 65001
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
-   neighbor EVPN-OVERLAY-PEERS peer group
-   neighbor EVPN-OVERLAY-PEERS remote-as 65001
-   neighbor EVPN-OVERLAY-PEERS update-source Loopback0
-   neighbor EVPN-OVERLAY-PEERS bfd
-   neighbor EVPN-OVERLAY-PEERS route-reflector-client
-   neighbor EVPN-OVERLAY-PEERS send-community
-   neighbor EVPN-OVERLAY-PEERS maximum-routes 0
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-reflector-client
+   neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
    neighbor RR-OVERLAY-PEERS remote-as 65001
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
    neighbor RR-OVERLAY-PEERS maximum-routes 0
-   neighbor 10.255.1.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.0.1 peer group RR-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.1.1 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.1 description s1-pe01_Loopback0
-   neighbor 10.255.1.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.2 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.2 description s1-pe02_Loopback0
-   neighbor 10.255.1.3 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.3 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.3 description s1-pe03_Loopback0
-   neighbor 10.255.1.4 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.4 description s1-pe04_Loopback0
-   neighbor 10.255.1.5 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.5 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
-      neighbor EVPN-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor RR-OVERLAY-PEERS activate
    !
    address-family ipv4
-      no neighbor EVPN-OVERLAY-PEERS activate
+      no neighbor MPLS-OVERLAY-PEERS activate
       no neighbor RR-OVERLAY-PEERS activate
 !
 router isis CORE
@@ -183,7 +187,10 @@ router isis CORE
    router-id ipv4 10.255.0.4
    is-type level-2
    log-adjacency-changes
+   set-overload-bit on-startup 1800
    advertise passive-only
+   spf-interval 1 50 100
+   graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
