--- a/config-builder/intended/structured_configs/s1-p01.yml
+++ b/config-builder/intended/structured_configs/s1-p01.yml
@@ -13,10 +13,11 @@ router_bgp:
     wait_install: true
   bgp_cluster_id: 10.255.0.1
   peer_groups:
-  - name: EVPN-OVERLAY-PEERS
-    type: evpn
+  - name: MPLS-OVERLAY-PEERS
+    type: mpls
     update_source: Loopback0
     bfd: true
+    password: Q4fqtbqcZ7oQuKfuWtNGRQ==
     send_community: all
     maximum_routes: 0
     remote_as: '65001'
@@ -29,39 +30,45 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65001'
   address_family_evpn:
-    peer_groups:
-    - name: EVPN-OVERLAY-PEERS
-      activate: true
     neighbor_default:
       encapsulation: mpls
       next_hop_self_source_interface: Loopback0
+    peer_groups:
+    - name: RR-OVERLAY-PEERS
+      activate: true
+    - name: MPLS-OVERLAY-PEERS
+      activate: true
   address_family_ipv4:
     peer_groups:
-    - name: EVPN-OVERLAY-PEERS
+    - name: MPLS-OVERLAY-PEERS
       activate: false
     - name: RR-OVERLAY-PEERS
       activate: false
   neighbors:
   - ip_address: 10.255.1.1
-    peer_group: EVPN-OVERLAY-PEERS
+    peer_group: MPLS-OVERLAY-PEERS
     peer: s1-pe01
     description: s1-pe01_Loopback0
   - ip_address: 10.255.1.2
-    peer_group: EVPN-OVERLAY-PEERS
+    peer_group: MPLS-OVERLAY-PEERS
     peer: s1-pe02
     description: s1-pe02_Loopback0
   - ip_address: 10.255.1.3
-    peer_group: EVPN-OVERLAY-PEERS
+    peer_group: MPLS-OVERLAY-PEERS
     peer: s1-pe03
     description: s1-pe03_Loopback0
   - ip_address: 10.255.1.4
-    peer_group: EVPN-OVERLAY-PEERS
+    peer_group: MPLS-OVERLAY-PEERS
     peer: s1-pe04
     description: s1-pe04_Loopback0
   - ip_address: 10.255.1.5
-    peer_group: EVPN-OVERLAY-PEERS
+    peer_group: MPLS-OVERLAY-PEERS
     peer: s2-pe01
     description: s2-pe01_Loopback0
+  - ip_address: 10.255.0.4
+    peer_group: RR-OVERLAY-PEERS
+    peer: s2-p02
+    description: s2-p02_Loopback0
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -141,6 +148,17 @@ router_isis:
   segment_routing_mpls:
     router_id: 10.255.0.1
     enabled: true
+  graceful_restart:
+    enabled: true
+  set_overload_bit:
+    on_startup:
+      delay: 1800
+      wait_for_bgp:
+        enabled: true
+  spf_interval:
+    interval: 1
+    wait_interval: 50
+    hold_interval: 100
 mpls:
   ip: true
 router_bfd:
