--- a/config-builder/intended/structured_configs/s1-pe04.yml
+++ b/config-builder/intended/structured_configs/s1-pe04.yml
@@ -152,6 +152,17 @@ router_isis:
   segment_routing_mpls:
     router_id: 10.255.1.4
     enabled: true
+  graceful_restart:
+    enabled: true
+  set_overload_bit:
+    on_startup:
+      delay: 1800
+      wait_for_bgp:
+        enabled: true
+  spf_interval:
+    interval: 1
+    wait_interval: 50
+    hold_interval: 100
 mpls:
   ip: true
 router_bfd:
