--- a/config-builder/intended/configs/s1-pe04.cfg
+++ b/config-builder/intended/configs/s1-pe04.cfg
@@ -178,14 +178,15 @@ router isis CORE
    router-id ipv4 10.255.1.4
    is-type level-2
    log-adjacency-changes
-   set-overload-bit on-startup 1800
+   timers local-convergence-delay 10000 protected-prefixes
+   set-overload-bit on-startup wait-for-bgp
    advertise passive-only
    spf-interval 1 50 100
    graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
-      fast-reroute ti-lfa mode link-protection
+      fast-reroute ti-lfa mode link-protection level-2
    !
    segment-routing mpls
       no shutdown
