make: Refresh artifact

--- a/config-builder/intended/structured_configs/s1-p02.yml
+++ b/config-builder/intended/structured_configs/s1-p02.yml
@@ -232,6 +232,7 @@ ethernet_interfaces:
 metadata:
   platform: cEOS-lab
 router_bgp:
+  as_notation: asdot
   address_family_evpn:
     neighbor_default:
       encapsulation: mpls
