--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -140,14 +140,15 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
-router bgp 65001
+router bgp 73.1
+   bgp asn notation asdot
    router-id 10.255.0.4
    update wait-install
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS route-reflector-client
@@ -155,7 +156,7 @@ router bgp 65001
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
-   neighbor RR-OVERLAY-PEERS remote-as 65001
+   neighbor RR-OVERLAY-PEERS remote-as 73.1
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
