--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -137,13 +137,14 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
-router bgp 65001
+router bgp 73.1
+   bgp asn notation asdot
    router-id 10.255.1.5
    update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
