--- a/config-builder/intended/structured_configs/s2-p02.yml
+++ b/config-builder/intended/structured_configs/s2-p02.yml
@@ -1,7 +1,7 @@
 hostname: s2-p02
 is_deployed: true
 router_bgp:
-  as: '65001'
+  as: '73.1'
   router_id: 10.255.0.4
   bgp:
     default:
@@ -20,7 +20,7 @@ router_bgp:
     password: Q4fqtbqcZ7oQuKfuWtNGRQ==
     send_community: all
     maximum_routes: 0
-    remote_as: '65001'
+    remote_as: '73.1'
     route_reflector_client: true
   - name: RR-OVERLAY-PEERS
     type: mpls
@@ -28,7 +28,7 @@ router_bgp:
     bfd: true
     send_community: all
     maximum_routes: 0
-    remote_as: '65001'
+    remote_as: '73.1'
   address_family_evpn:
     neighbor_default:
       encapsulation: mpls
@@ -69,6 +69,7 @@ router_bgp:
     peer_group: RR-OVERLAY-PEERS
     peer: s1-p01
     description: s1-p01_Loopback0
+  as_notation: asdot
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
