--- a/config-builder/intended/structured_configs/s2-p02.yml
+++ b/config-builder/intended/structured_configs/s2-p02.yml
@@ -1,7 +1,7 @@
 hostname: s2-p02
 is_deployed: true
 router_bgp:
-  as: '73.1'
+  as: '65000'
   router_id: 10.255.0.4
   bgp:
     default:
@@ -20,7 +20,7 @@ router_bgp:
     password: Q4fqtbqcZ7oQuKfuWtNGRQ==
     send_community: all
     maximum_routes: 0
-    remote_as: '73.1'
+    remote_as: '65000'
     route_reflector_client: true
   - name: RR-OVERLAY-PEERS
     type: mpls
@@ -28,7 +28,7 @@ router_bgp:
     bfd: true
     send_community: all
     maximum_routes: 0
-    remote_as: '73.1'
+    remote_as: '65000'
   address_family_evpn:
     neighbor_default:
       encapsulation: mpls
@@ -70,6 +70,10 @@ router_bgp:
     peer: s1-p01
     description: s1-p01_Loopback0
   as_notation: asdot
+static_routes:
+- vrf: MGMT
+  destination_address_prefix: 10.73.0.0/16
+  gateway: 192.168.2.1
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -113,12 +117,12 @@ vrfs:
 - name: MGMT
   ip_routing: false
 management_interfaces:
-- name: Management1
+- name: Management0
   description: OOB_MANAGEMENT
   shutdown: false
   vrf: MGMT
   ip_address: 192.168.2.122/24
-  gateway: null
+  gateway: 192.168.2.1
   type: oob
 management_api_http:
   enable_vrfs:
