--- a/backbone.clab.yml
+++ b/backbone.clab.yml
@@ -7,7 +7,7 @@ mgmt:
 topology:
   kinds:
     ceos:
-      image: arista/ceos:${EOS_VERSION:=4.31.0F}
+      image: arista/ceos:${EOS_VERSION:=4.33.0F}
   nodes:
   # -------------------------------- #
   # Core P routers
@@ -93,13 +93,13 @@ topology:
       # startup-config:
       env:
         TMODE: lacp
-    s1-ce03:
-      kind: ceos
-      mgmt-ipv4: 192.168.2.213
-      startup-config: config-builder/intended/configs/s1-ce03.cfg
+    #s1-ce03:
+      #  kind: ceos
+      # mgmt-ipv4: 192.168.2.213
+      # startup-config: config-builder/intended/configs/s1-ce03.cfg
       # startup-config:
-      env:
-        TMODE: lacp
+      # env:
+      #   TMODE: lacp
 
   # -------------------------------- #
   # Site 2 CE
@@ -139,7 +139,7 @@ topology:
     - endpoints: ["s1-ce01:eth2", "s1-pe02:eth4"]
 
     - endpoints: ["s1-ce02:eth1", "s1-pe03:eth4"]
-    - endpoints: ["s1-ce03:eth1", "s1-pe04:eth4"]
+  #- endpoints: ["s1-ce03:eth1", "s1-pe04:eth4"]
 
   # Site 2 PE
     - endpoints: ["s2-pe01:eth1", "s2-p01:eth1"]
