--- a/config-builder/intended/configs/s1-p02.cfg
+++ b/config-builder/intended/configs/s1-p02.cfg
@@ -150,7 +150,7 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -159,13 +159,13 @@ interface Management1
 ip routing
 no ip routing vrf MGMT
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
 mpls ip
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
 router isis CORE
    net 49.0001.0102.5500.0001.00
@@ -186,9 +186,10 @@ router isis CORE
       no shutdown
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
