--- a/config-builder/intended/configs/s2-ce01.cfg
+++ b/config-builder/intended/configs/s2-ce01.cfg
@@ -21,7 +21,7 @@ alias sli show lacp interface Ethernet %1 detailed
 alias sqnz show interface counter queue | nz
 alias srnz show interface counter rate | nz
 alias summary show bgp summary
-
+alias summary6 show ipv6 bgp summary
 !
 service routing protocols model multi-agent
 !
@@ -44,7 +44,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 aaa authorization exec default local
@@ -63,6 +63,7 @@ interface Ethernet2
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.2.221/24
 !
 ip routing
@@ -74,11 +75,12 @@ ip route vrf BKP 0.0.0.0/0 10.200.1.1
 ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
