--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -120,7 +120,7 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -129,18 +129,18 @@ interface Management1
 ip routing
 no ip routing vrf MGMT
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
 mpls ip
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
-router bgp 73.1
+router bgp 65000
    bgp asn notation asdot
    router-id 10.255.0.4
    update wait-install
@@ -148,7 +148,7 @@ router bgp 73.1
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS route-reflector-client
@@ -156,7 +156,7 @@ router bgp 73.1
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
-   neighbor RR-OVERLAY-PEERS remote-as 73.1
+   neighbor RR-OVERLAY-PEERS remote-as 65000
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
@@ -202,9 +202,10 @@ router isis CORE
       no shutdown
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
