--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -108,7 +108,7 @@ interface Loopback1810
    vrf SVC01_VRF01
    ip address 10.18.0.5/32
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -126,25 +126,25 @@ ip routing
 no ip routing vrf MGMT
 ip routing vrf SVC01_VRF01
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
 mpls ip
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
-router bgp 73.1
+router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.5
    update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
@@ -193,9 +193,10 @@ router isis CORE
       no shutdown
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
