--- a/config-builder/intended/structured_configs/s2-p01.yml
+++ b/config-builder/intended/structured_configs/s2-p01.yml
@@ -1,5 +1,9 @@
 hostname: s2-p01
 is_deployed: true
+static_routes:
+- vrf: MGMT
+  destination_address_prefix: 10.73.0.0/16
+  gateway: 192.168.2.1
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -43,12 +47,12 @@ vrfs:
 - name: MGMT
   ip_routing: false
 management_interfaces:
-- name: Management1
+- name: Management0
   description: OOB_MANAGEMENT
   shutdown: false
   vrf: MGMT
   ip_address: 192.168.2.121/24
-  gateway: null
+  gateway: 192.168.2.1
   type: oob
 management_api_http:
   enable_vrfs:
